[workspace]
resolver = "2"
members = [
    "dsa",
    "ecdsa",
    "ed448",
    "ed25519",
    "lms",
    "ml-dsa",
    "rfc6979",
    "slh-dsa",
]

[workspace.package]
edition = "2024"
rust-version = "1.93"

[workspace.dependencies]
# Internal workspace members
rfc6979 = { version = "0.5.0-rc.5" }

# External dependencies (alphabetical)
aes = { version = "0.9.0-rc.4" }
chacha20 = { version = "0.10", features = ["rng"] }
cipher = { version = "0.5" }
const-oid = { version = "0.10", features = ["db"] }
criterion = { version = "0.8" }
crypto-bigint = { version = "0.7.0-rc.27", default-features = false, features = ["alloc", "zeroize"] }
crypto-primes = { version = "0.7.0-pre.9", default-features = false }
ctr = { version = "0.10.0-rc.3" }
der = { version = "0.8.0-rc.12", features = ["alloc", "derive"] }
digest = { version = "0.11.0-rc.12", default-features = false, features = ["oid"] }
elliptic-curve = { version = "0.14.0-rc.28", default-features = false, features = ["sec1"] }
getrandom = { version = "0.4", features = ["sys_rng"] }
hex = { version = "0.4", features = ["serde"] }
hex-literal = { version = "1" }
hmac = { version = "0.13.0-rc.5", default-features = false }
hybrid-array = { version = "0.4", features = ["extra-sizes", "zeroize"] }
module-lattice = { version = "0.1" }
num-bigint = { version = "0.4" }
paste = { version = "1" }
pkcs8 = { version = "0.11.0-rc.11", default-features = false, features = ["alloc", "pem"] }
proptest = { version = "1" }
rand = { version = "0.10" }
rand_core = { version = "0.10" }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_bytes = { version = "0.11", default-features = false }
serde_json = { version = "1" }
serdect = { version = "0.4", default-features = false, features = ["alloc"] }
sha1 = { version = "0.11.0-rc.5" }
sha2 = { version = "0.11.0-rc.5", default-features = false, features = ["oid"] }
sha3 = { version = "0.11.0-rc.7", default-features = false }
signature = { version = "3.0.0-rc.10", default-features = false, features = ["alloc", "digest", "rand_core"] }
spki = { version = "0.8.0-rc.4", default-features = false }
static_assertions = { version = "1.1" }
subtle = { version = "2", default-features = false }
typenum = { version = "1.19", features = ["const-generics"] }
zerocopy = { version = "0.8", features = ["derive"] }
zeroize = { version = "1", default-features = false, features = ["alloc"] }

[profile.dev]
opt-level = 2

[patch.crates-io]
# A global patch crates-io block is used to avoid duplicate dependencies
# when pulling a member crate through git
dsa = { git = "https://github.com/earthlings-dev/rustcrypto-signatures.git" }
ecdsa = { git = "https://github.com/earthlings-dev/rustcrypto-signatures.git" }
ed448 = { git = "https://github.com/earthlings-dev/rustcrypto-signatures.git" }
ed25519 = { git = "https://github.com/earthlings-dev/rustcrypto-signatures.git" }
lms-signature = { git = "https://github.com/earthlings-dev/rustcrypto-signatures.git" }
ml-dsa = { git = "https://github.com/earthlings-dev/rustcrypto-signatures.git" }
rfc6979 = { git = "https://github.com/earthlings-dev/rustcrypto-signatures.git" }
slh-dsa = { git = "https://github.com/earthlings-dev/rustcrypto-signatures.git" }
