[package]
name = "dsa"
version = "0.7.0-rc.13"
description = """
Pure Rust implementation of the Digital Signature Algorithm (DSA) as specified
in FIPS 186-4 (Digital Signature Standard), providing RFC6979 deterministic
signatures as well as support for added entropy
"""
edition.workspace = true
license = "Apache-2.0 OR MIT"
readme = "README.md"
homepage = "https://github.com/RustCrypto/signatures/tree/master/dsa"
repository = "https://github.com/RustCrypto/signatures"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "nist", "signature"]
rust-version.workspace = true

[dependencies]
der = { workspace = true, features = ["alloc"] }
digest = { workspace = true, default-features = true }
crypto-bigint = { workspace = true, default-features = false, features = ["alloc", "zeroize"] }
crypto-primes = { workspace = true, default-features = false }
rfc6979 = { workspace = true }
sha2 = { workspace = true, default-features = false }
signature = { workspace = true, default-features = false, features = ["alloc", "digest", "rand_core"] }
zeroize = { workspace = true, default-features = false, features = ["alloc"] }

# optional dependencies
pkcs8 = { workspace = true, optional = true, default-features = false, features = ["alloc"] }

[dev-dependencies]
chacha20 = { workspace = true, features = ["rng"] }
hex = { workspace = true }
hex-literal = { workspace = true }
pkcs8 = { workspace = true, default-features = false, features = ["pem"] }
proptest = { workspace = true }
getrandom = { workspace = true, features = ["sys_rng"] }
sha1 = { workspace = true }
der = { workspace = true, features = ["derive"] }
rand_core = { workspace = true }

[features]
default = ["pkcs8"]
hazmat = []

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "sign"
required-features = ["hazmat", "pkcs8"]

[[example]]
name = "generate"
required-features = ["hazmat"]

[[example]]
name = "export"
required-features = ["hazmat", "pkcs8"]
