[package]
name = "ecdsa"
version = "0.17.0-rc.16"
description = """
Pure Rust implementation of the Elliptic Curve Digital Signature Algorithm
(ECDSA) as specified in FIPS 186-4 (Digital Signature Standard), providing
RFC6979 deterministic signatures as well as support for added entropy
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/RustCrypto/signatures/tree/master/ecdsa"
repository = "https://github.com/RustCrypto/signatures"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "ecc", "nist", "secp256k1", "signature"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
elliptic-curve = { workspace = true, default-features = false, features = ["sec1"] }
signature = { workspace = true, default-features = false, features = ["rand_core"] }
zeroize = { workspace = true, default-features = false }

# optional dependencies
der = { workspace = true, optional = true }
digest = { workspace = true, optional = true, default-features = false, features = ["oid"] }
rfc6979 = { workspace = true, optional = true }
serdect = { workspace = true, optional = true, default-features = false, features = ["alloc"] }
sha2 = { workspace = true, optional = true, default-features = false, features = ["oid"] }
spki = { workspace = true, optional = true, default-features = false }

[dev-dependencies]
elliptic-curve = { workspace = true, default-features = false, features = ["dev"] }
hex-literal = { workspace = true }
sha2 = { workspace = true, default-features = false }

[features]
default = ["digest"]
alloc = ["elliptic-curve/alloc", "signature/alloc", "spki/alloc"]
std = ["alloc", "elliptic-curve/std"]

algorithm = ["dep:rfc6979", "digest", "elliptic-curve/arithmetic", "hazmat"]
dev = ["algorithm", "digest/dev", "elliptic-curve/dev"]
der = ["dep:der"]
digest = ["dep:digest", "elliptic-curve/digest", "signature/digest"]
getrandom = ["elliptic-curve/getrandom"]
hazmat = []
pkcs8 = ["der", "digest", "elliptic-curve/pkcs8"]
pem = ["elliptic-curve/pem", "pkcs8"]
serde = ["dep:serdect", "elliptic-curve/serde", "pkcs8"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
