[package]
name = "ed448"
version = "0.5.0-rc.5"
edition.workspace = true
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
description = """
Edwards Digital Signature Algorithm (EdDSA) over Curve448 (as specified in
RFC8032) support library providing signature type definitions and PKCS#8
private key decoding/encoding support
"""
documentation = "https://docs.rs/ed448"
homepage = "https://github.com/RustCrypto/signatures/tree/master/ed448"
repository = "https://github.com/RustCrypto/signatures"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["crypto", "curve448", "ecc", "signature", "signing"]
rust-version.workspace = true

[dependencies]
signature = { workspace = true, default-features = false }

# optional dependencies
pkcs8 = { workspace = true, optional = true, default-features = true }
serde = { workspace = true, optional = true, default-features = false }
serde_bytes = { workspace = true, optional = true, default-features = false }
zeroize = { workspace = true, optional = true, default-features = false }

[dev-dependencies]
hex-literal = { workspace = true }

[features]
default = ["alloc"]
alloc = ["pkcs8?/alloc"]
pem = ["alloc", "pkcs8/pem"]
serde_bytes = ["serde", "dep:serde_bytes"]

[package.metadata.docs.rs]
all-features = true
