[package]
name = "lms-signature"
description = "Pure Rust implementation of Leighton-Micali Hash-Based Signatures (RFC 8554)"
version = "0.1.0-rc.2"
edition.workspace = true
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/RustCrypto/signatures/tree/master/lms"
repository = "https://github.com/RustCrypto/signatures"
readme = "README.md"
rust-version.workspace = true
categories = ["cryptography"]
keywords = ["crypto", "signature"]

[dependencies]
digest = { workspace = true, default-features = true }
hybrid-array = { workspace = true, features = ["extra-sizes", "zeroize"] }
getrandom = { workspace = true, features = ["sys_rng"] }
sha2 = { workspace = true, default-features = true }
static_assertions = { workspace = true }
rand_core = { workspace = true }
signature = { workspace = true, default-features = true, features = ["alloc", "digest", "rand_core"] }
typenum = { workspace = true, features = ["const-generics"] }
zeroize = { workspace = true, default-features = true }

[dev-dependencies]
hex = { workspace = true }
hex-literal = { workspace = true }
