[package]
name = "ml-dsa"
description = """
Pure Rust implementation of ML-DSA (formerly known as CRYSTALS-Dilithium) as
described in FIPS-204 (final)
"""
version = "0.1.0-rc.7"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/RustCrypto/signatures/tree/master/ml-dsa"
repository = "https://github.com/RustCrypto/signatures"
readme = "README.md"
categories = ["cryptography"]
keywords = ["crypto", "signature"]
# Exclude these large files in published crate:
exclude = [
    "tests/key-gen.json",
    "tests/key-gen.rs",
    "tests/proptests.proptest-regressions",
    "tests/sig-gen.json",
    "tests/sig-gen.rs",
    "tests/sig-ver.json",
    "tests/sig-ver.rs",
]

[features]
default = ["rand_core", "alloc", "pkcs8"]
zeroize = ["dep:zeroize", "hybrid-array/zeroize", "module-lattice/zeroize"]
rand_core = ["dep:rand_core", "signature/rand_core"]
alloc = ["pkcs8?/alloc"]
pkcs8 = ["dep:const-oid", "dep:pkcs8"]

[dependencies]
hybrid-array = { workspace = true, features = ["extra-sizes"] }
module-lattice = { workspace = true }
sha3 = { workspace = true, default-features = false }
signature = { workspace = true, default-features = false, features = ["digest"] }

# optional dependencies
const-oid = { workspace = true, features = ["db"], optional = true }
pkcs8 = { workspace = true, default-features = false, optional = true }
rand_core = { workspace = true, optional = true }
zeroize = { workspace = true, optional = true, default-features = false }

[dev-dependencies]
criterion = { workspace = true }
getrandom = { workspace = true, features = ["sys_rng"] }
hex = { workspace = true, features = ["serde"] }
hex-literal = { workspace = true }
pkcs8 = { workspace = true, features = ["pem"] }
proptest = { workspace = true }
serde = { workspace = true, default-features = true, features = ["derive"] }
serde_json = { workspace = true }

[[bench]]
name = "ml_dsa"
harness = false
