[package]
name = "rfc6979"
version = "0.5.0-rc.5"
description = """
Pure Rust implementation of RFC6979: Deterministic Usage of the
Digital Signature Algorithm (DSA) and Elliptic Curve Digital Signature Algorithm (ECDSA)
"""
authors = ["RustCrypto Developers"]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/RustCrypto/signatures/tree/master/rfc6979"
repository = "https://github.com/RustCrypto/signatures"
readme = "README.md"
categories = ["cryptography", "no-std"]
keywords = ["dsa", "ecdsa", "signature"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
hmac = { workspace = true, default-features = false }
subtle = { workspace = true, default-features = false }

[dev-dependencies]
hex-literal = { workspace = true }
sha2 = { workspace = true, default-features = true }
