[package]
name = "slh-dsa"
description = """
Pure Rust implementation of SLH-DSA (aka SPHINCS+) as described in the
FIPS-205 standard
"""
version = "0.2.0-rc.4"
edition.workspace = true
rust-version.workspace = true
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/RustCrypto/signatures/tree/master/slh-dsa"
repository = "https://github.com/RustCrypto/signatures"
readme = "README.md"
categories = ["cryptography"]
keywords = ["crypto", "signature"]
exclude = ["tests"]

[dependencies]
const-oid = { workspace = true, features = ["db"] }
digest = { workspace = true, default-features = true }
hmac = { workspace = true, default-features = true }
hybrid-array = { workspace = true, features = ["extra-sizes"] }
pkcs8 = { workspace = true, default-features = false }
rand_core = { workspace = true }
sha2 = { workspace = true, default-features = false }
sha3 = { workspace = true, default-features = false }
signature = { workspace = true, default-features = true, features = ["rand_core"] }
typenum = { workspace = true, features = ["const-generics"] }
zerocopy = { workspace = true, features = ["derive"] }

# optional dependencies
zeroize = { workspace = true, optional = true, default-features = false }

[dev-dependencies]
aes = { workspace = true }
criterion = { workspace = true }
cipher = { workspace = true }
ctr = { workspace = true }
hex = { workspace = true, features = ["serde"] }
hex-literal = { workspace = true }
num-bigint = { workspace = true }
paste = { workspace = true }
pkcs8 = { workspace = true, features = ["pem"] }
proptest = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, default-features = true, features = ["derive"] }

[lib]
bench = false

[[bench]]
name = "sign_verify"
harness = false

[features]
alloc = []
default = ["alloc", "pkcs8/alloc"]
zeroize = ["dep:zeroize", "hybrid-array/zeroize"]
